--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@radix-ui/react-dropdown-menu": "^2.0.1",
     "@tanstack/react-query": "^4.20.9",
     "axios": "^1.2.2",
+    "csstype": "^3.0.10",
     "jotai": "^1.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1"
   },
