--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,10 @@
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
     "react/react-in-jsx-scope": "off"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
