--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ./",
+    "format": "prettier -w ./"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.0.2",
